--- a/css/01_transform.css
+++ b/css/01_transform.css
@@ -25,6 +25,8 @@ h1 {
 a {
   color: blue;
   text-decoration: none;
+  transition: all 3s;
+  transition-delay: 1s;
 }
 
 a:hover {
@@ -37,11 +39,32 @@ a:hover {
   width: 100%;
   padding: 20px;
   background: #efefef;
+  transition: all 3s;
+  transition-delay: 1s;
+}
+
+.content:hover {
+  background: black;
 }
 
 .shape {
   margin-left: 100px;
-  width: 200px;  
+  width: 200px;
   height: 200px;
   background: red;
+  transition: all 3s;
+  transition-delay: 1s;
 }
+
+.content:hover .shape {
+  transform: rotateZ(3645deg) scale(1.5);
+  background: blue;
+}
+
+.content:hover a {
+  color: white;
+}
+
+
+
+
