--- a/css/03_animation.css
+++ b/css/03_animation.css
@@ -37,16 +37,59 @@ a {
 
 .shape {
   margin: 85px;
-  width: 200px;  
+  width: 200px;
   height: 200px;
   background: royalblue;
 }
 
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(60deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes squiggle {
+  0% {
+    background: red;
+    transform: scale(1.0) rotateZ(0deg);
+  }
+  25% {
+    background: red;
+    transform: scale(1.0) rotateZ(0deg);
+  }
+  90% {
+    transform: scale(1.7) rotateZ(45deg);
+  }
+  100% {
+    background: blue;
+    transform: scale(1.5) rotateZ(45deg);
+  }
+}
+
+
 .variation-1 {
+  animation-name: squiggle;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
 }
 
 .variation-2 {
+  animation-name: spin;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate-reverse;
 }
 
 .variation-3 {
+  animation-name: spin;
+  animation-duration: 3s;
+  animation-iteration-count: 4;
+  animation-direction: reverse;
 }
